crates/weir-parser/src/snapshots/weir_parser__tests__parse_cond.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn classify
  params:
    x : i32
  returns: String
  body:
    (cond ((< x 0) "negative") ((= x 0) "zero") (else "positive"))
)
