crates/weir-parser/src/snapshots/weir_parser__tests__parse_defclass.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defclass Show
  type-params: 'a
  methods:
    show : (Fn ['a] String)
)
