crates/weir-parser/src/snapshots/weir_parser__tests__parse_defn_no_types.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn greet
  params:
    name
  body:
    (println name)
)
