crates/weir-parser/src/snapshots/weir_parser__tests__parse_defstruct.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defstruct Vec2
  x : f32
  y : f32
)
