crates/weir-parser/src/snapshots/weir_parser__tests__parse_deftype.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(deftype Option 'a
  Some 'a
  None
)
