crates/weir-parser/src/snapshots/weir_parser__tests__parse_if.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn abs
  params:
    x : i32
  returns: i32
  body:
    (if (< x 0) (- 0 x) x)
)
