crates/weir-parser/src/snapshots/weir_parser__tests__parse_instance.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(instance Show i32
  (defn show
    params:
      x
    body:
      (str x)
  )
)
