crates/weir-parser/src/snapshots/weir_parser__tests__parse_lambda.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (let
      bindings:
        f = (fn (x) (+ x 1))
      body:
        (println (f 5))
    )
)
