crates/weir-parser/src/snapshots/weir_parser__tests__parse_let.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (let
      bindings:
        x = 5
        y = 10
      body:
        (+ x y)
    )
)
