crates/weir-parser/src/snapshots/weir_parser__tests__parse_match.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn show-option
  params:
    opt
  body:
    (match opt
      ((Some val) (println val))
      (None (println "none")))
)
