crates/weir-parser/src/snapshots/weir_parser__tests__parse_mut_let.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (let
      bindings:
        mut x = 5
      body:
        (set! x 10)
        x
    )
)
