crates/weir-parser/src/snapshots/weir_parser__tests__parse_named_args.snap
---
source: crates/weir-parser/src/lib.rs
expression: result
---
(defn main
  params:
  returns: Unit
  body:
    (spawn-enemy :pos origin :health 50)
)
